# payments-gateway

./: .drone.yml  Cargo.toml  Dockerfile
config/: base.toml  development.toml  k8s.toml
docker/: Dockerfile.default  Dockerfile.release  docker-compose.yml
docs/: apispec.yml
k8s/: 00-cm-pay-gw.yml  00-job-createdb.yml  20-svc-pay-gw.yml  30-deploy-pay-gw.yml
migrations/2018-10-03-085749_create_accounts/: up.sql
migrations/2018-10-17-125440_accounts_create/: up.sql
migrations/2018-10-25-092731_users_create/: up.sql
migrations/2018-11-13-075754_upate_users/: down.sql  up.sql
migrations/2018-11-13-080034_upate_accounts/: down.sql  up.sql
migrations/2018-11-14-121242_create_devices/: up.sql
migrations/2018-11-14-125800_create_devices_tokens/: down.sql  up.sql
migrations/2018-11-22-113903_create_templates/: up.sql
migrations/2018-12-05-073631_update_accounts/: down.sql  up.sql
migrations/2019-01-10-090917_create_transactions_fiat/: down.sql  up.sql
src/: cli.yml  client.rs  config.rs  lib.rs  logger.rs  macros.rs  main.rs  schema.rs  sentry_integration.rs  utils.rs
src/api/: auth.rs  error.rs  mod.rs  utils.rs
src/client/: error.rs  mod.rs
src/models/: account.rs  account_address.rs  account_id.rs  amount.rs  auth.rs  balance.rs  callback.rs  device.rs  device_confirm_token.rs  device_id.rs  device_public_key.rs  device_token.rs  device_type.rs  email_confirm_token.rs  emails.rs  exchange_id.rs  fees.rs  jwt_claims.rs  mod.rs  password.rs  password_reset_token.rs  push_notifications.rs  rate.rs  receipt.rs  storiqa_jwt.rs  template.rs  user.rs  (+5 more)
(+42 files in other folders)
