[package]
name = "payments"
version = "0.1.0"
authors = ["Алексей Карасев <karasev.alexey@gmail.com>"]

[lib]
name = "payments_lib"
path = "src/lib.rs"

[dependencies]
futures = "0.1"
failure = "0.1"
hyper = "0.12"
diesel = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
log = "0.4"
env_logger = "0.5"
config = "0.9"
