[package]
name = "payments"
version = "0.1.0"
authors = ["Alexey Karasev <karasev.alexey@gmail.com>"]

[lib]
name = "payments_lib"
path = "src/lib.rs"

[dependencies]
futures = "0.1"
failure = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
diesel = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
log = "0.4"
env_logger = "0.5"
config = "0.9"
clap = {version = "2", features = ["yaml"]}
http_router = "0.1"
regex = "1"
base64 = "0.9"
jsonwebtoken = "5"
